@@ -85,9 +85,10 @@ private:
 public:
 #ifndef SKIP_DOCS
 	const char* get_icon_path(const char* name, IconSizes sz, IconContext ctx);
-	Fl_Shared_Image* get_icon(const char* name, IconSizes sz, IconContext ctx, bool allow_absolute_path);
+	Fl_Shared_Image* get_icon(const char* name, IconSizes sz, IconContext ctx, 
+			bool allow_absolute_path, bool resize_icon);
 	bool set_icon(const char* name, Fl_Widget* widget, IconSizes sz, IconContext ctx, 
-			bool allow_absolute_path, bool redraw_widget);
+			bool allow_absolute_path, bool redraw_widget, bool resize_icon);
 	void load_theme(const char* name);
 	void reload_icons(void);
 	void repoll_icons(void);
@@ -144,11 +145,14 @@ public:
 	 * if <em>name</em> is absolute path to the icon (when <em>allow_absolute_path</em> was true, which is 
 	 * default) and will try to load it. If fails, it will consult icon theme.
 	 *
+	 * Returned icon will match <em>sz</em> size; if it is larger or smaller than the loaded, it will be scalled
+	 * to the given size. If <em>resize_icon</em> is false, scaling will not be done.
+	 *
 	 * If icon wasn't found, fallback icon will be loaded. If fails, NULL will be returned. For further members 
-	 * of Fl_Shared_Image, see FLTK documentation
+	 * of Fl_Shared_Image, see FLTK documentation.
 	 */
 	static Fl_Shared_Image* get(const char* name, IconSizes sz, IconContext ctx = ICON_CONTEXT_ANY, 
-			bool allow_absolute_path = true);
+			bool allow_absolute_path = true, bool resize_icon = true);
 
 	/**
 	 * Returns full path to given icon name. If icon wasn't found, returned string will be empty
@@ -167,7 +171,7 @@ public:
 	 * To retrieve the image object of set image, you can use image() function from given widget object.
 	 */
 	static bool set(Fl_Widget* widget, const char* name, IconSizes sz, IconContext ctx = ICON_CONTEXT_ANY,
-			bool allow_absolute_path = true, bool redraw_widget = true);
+			bool allow_absolute_path = true, bool redraw_widget = true, bool resize_icon = true);
 
 	/**
 	 * Returns IconTheme object.
